# Genetic-Math-Function-finder

./: CMakeLists.txt  GodOfTheTrees.cpp  GodOfTheTrees.h  README.md  main.cpp
Generator/: ExpressionGenerator.cpp  ExpressionGenerator.h
God/: GodOfTheTrees.cpp  GodOfTheTrees.h
Tree/: Tree.cpp  Tree.h
Tree/Node/: Node.cpp  Node.h
